# ComfyUI-Diana

./: README.md  __init__.py  diana.lib  diana.py  pyproject.toml
ComfyUI-Diana/web/js/: diana.js
diana_lib_packer/: pack.bat  pack_to_lib.py  phrases.json
libraries/: diana.lib  kerrigan.lib  kitty.lib
web/js/: diana.js
